--- a/claseCombinadores/index.html
+++ b/claseCombinadores/index.html
@@ -1,20 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div>
-        <h2>Soy un h2</h2>
-        <p>Soy un p</p>
-        <h2>Soy un h2</h2>
-        <h3>Soy un h3</h3>
-        <p>Soy un p</p>
-        <h2>Soy un h2</h2>
-        <p>Soy un p</p>
-    </div>
+  <div>
+    <h2>Soy un h2</h2>
+    <p>Soy un p</p>
+    <h2>Soy un h2</h2>
+    <h3>Soy un h3</h3>
+    <p>Soy un p</p>
+    <h2>Soy un h2</h2>
+    <p>Soy un p</p>
+  </div>
+
+  <div>
+    <h2>Soy un h2</h2>
+    <p>Soy un p</p>
+    <h2>Soy un h2</h2>
+    <h3>Soy un h3</h3>
+    <p>Soy un p</p>
+    <p>Soy un p</p>
+  </div>
+
+  <div>
+    <article>
+      <p>Soy un textingo</p>
+    </article>
+    <article>
+      <p>Soy un textingo</p>
+    </article>
+    <section>
+      <div>
+        <p>Soy un textingo</p>
+      </div>
+    </section>
+    <p>Soy un textingo</p>
+  </div>
 </body>
 </html>
