--- a/clasePosition/reto/avatar.html
+++ b/clasePosition/reto/avatar.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,19 +8,29 @@
   <title>Position</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <main>
     <div class="parent-box">
       <div class="box" id="desc-box">
         <img src="aang.png" alt="Imagen del Avatar Aang" class="character-photo">
-        <p>El Avatar Aang era un Nómada Aire nacido en el 12 del AG y el Avatar durante el conflicto de un siglo de duración conocido como la Guerra de los Cien Años. Su predecesor inmediato era el Avatar Roku, y su sucesor inmediato es el Avatar Korra.</p>
+        <div>
+          <p>El Avatar Aang era un Nómada Aire nacido en el 12 del AG y el Avatar durante el conflicto de un siglo de
+            duración conocido como la Guerra de los Cien Años. Su predecesor inmediato era el Avatar Roku, y su sucesor
+            inmediato es el Avatar Korra.</p>
+        </div>
+        <div class="container-data">
+          <div class="container-mini-box">Nacionalidad: <br />Templo del Aire del Sur</div>
+          <div class="container-mini-box">Preosesión: <br />Avatar</div>
+        </div>
       </div>
       <div class="box" id="title-box">
-        <p>
+        <h1>
           Aang
-        </p>
+        </h1>
       </div>
     </div>
-  </main>  
+  </main>
 </body>
+
 </html>
