Added all styles and finished the desafioLayoutShifter

--- a/ResponsiveDesign/desafioLayoutShifter/index.html
+++ b/ResponsiveDesign/desafioLayoutShifter/index.html
@@ -6,6 +6,8 @@
   <title>JMS Junk Removal & Power Washing</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="tablet.css" media="screen and (min-width:600px)">
+  <link rel="stylesheet" href="desktop.css" media="screen and (min-width:800px)">
 </head>
 <body>
   <header>
@@ -34,7 +36,7 @@
         </figure>
         <h3>Don't let clutter create chaos</h3>
         <p>Choose a family-owned junk removal company proudly servicing Aurora, CO and the surrounding areas</p>
-        <a class="btn-contact">Contat Us!</a>
+        <a class="btn-contact">Contact Us!</a>
       </div>
     </div>
     <div class="element c2">
@@ -63,6 +65,24 @@
         <p>
           We have a state-of-the-art trailer available that you can use to complete your heavy-duty projects. Use our trailer to complete your indoor or putdoor project
           We offer trailer rental services for residential and commercial use. You may use our vehicle to haul away:
+        </p>
+      </div>
+    </div>
+    <div class="element c5">
+      <div class="hiring-announce">
+        <h1>Why should you work with us?</h1>
+        <p>
+          Whether you're hiring our team for a commercial trailer rental or power washing service, you can expect our team to provide quality work. We're top rated in the area because we:
+        </p>
+        <br/>
+          <ul>
+            <li>Offer outstanding customer services</li>
+            <li>Are reliable and professional</li>
+            <li>Leave your property cleaner than when we arrived</li>
+          </ul>
+        <br/>
+        <p>
+          Join our list of satisfied customers when you work with our locally owned company.
         </p>
       </div>
     </div>
