Fixed minimal details about the css in desafioLayoutShifter

--- a/ResponsiveDesign/desafioLayoutShifter/index.html
+++ b/ResponsiveDesign/desafioLayoutShifter/index.html
@@ -31,12 +31,14 @@
   <main class="container">
     <div class="element c1">
       <div class="c1-background">
+        <br/>
         <figure class="first-view">
           <img src="./images/JMS_1.png" alt="JMS: Junk Removal and Power Washing Logo">
         </figure>
         <h3>Don't let clutter create chaos</h3>
         <p>Choose a family-owned junk removal company proudly servicing Aurora, CO and the surrounding areas</p>
         <a class="btn-contact">Contact Us!</a>
+        <br/>
       </div>
     </div>
     <div class="element c2">
@@ -64,7 +66,7 @@
           <br>
         <p>
           We have a state-of-the-art trailer available that you can use to complete your heavy-duty projects. Use our trailer to complete your indoor or putdoor project
-          We offer trailer rental services for residential and commercial use. You may use our vehicle to haul away:
+          We offer trailer rental services for residential and commercial use. You may use our vehicle to haul away.
         </p>
       </div>
     </div>
@@ -90,8 +92,6 @@
   <footer>
     <div class="social-media">
       <a href="#" class="fa fa-facebook"></a>
-      <a href="#"></a>
-      <a href="#"></a>
     </div>
     <div class="info"> 
       <a href="#" class="info-text">
